--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ecommerce-app-2023",
+  "name": "AllNest",
   "version": "1.0.0",
-  "description": "ecommerce rest api",
+  "description": "Ecommerce application built with React, Node.js, and MongoDB.",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
-  "author": "Suraj",
+  "author": "Simran",
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "react-icons": "^4.11.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "starability": "^2.4.0"
   }
 }
